--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,24 @@
+<head>
+</head>
+<body>
+<div style="width:500px; height: 700px; font-family:verdana; padding-top:20px; margin-top: 20px;
+margin-left: auto; margin-right: auto; background-color: #DDD; text-align:center;
+box-shadow: 0px 5px 10px rgba(0,0,0,0.5)">
 <h1>Anton Basov</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<a style="text-decoration:none" href="https://github.com/bastova/app1">https://github.com/bastova/app1</a>
+<br><br>
+<img style="width:400px" src="http://fc03.deviantart.net/fs70/i/2013/039/1/8/heimerdinger_still_has_hope_by_kukara4-d5tmd1r.jpg" />
+<div style="width: 100%; height: 20px; background-color: #AAA; margin-top: 10px; margin-bottom: 10px"></div>
+<div style="width:300px; height:250px; padding-top: 10px; padding-bottom: 10px;
+text-align:left; padding-left: 30px;
+margin-left:auto; margin-right:auto">
+<form>
+<input style="height: 40px" type="text" size="40" value="What are you?"><br><br>
+<input type="radio" name="animal" value="cat">cat<br>
+<input type="radio" name="animal" value="dog">dog<br><br>
+<input type="checkbox" name="pancakes">I like pancakes<br><br>
+<input type="button" value="CLICK MEH IF YOU DARE!">
+</form>
+</div>
+</div>
+</body>
