tables and stuff

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.home_link_button {
+	text-decoration: none;
+	background-color: white;
+	display: block;
+	width: 200px;
+	margin: 0 auto;
+	color: gray;
+	height: 30px;
+	line-height: 30px;
+	text-align:center;
+}
