--- a/app/views/landing_page/home.html.erb
+++ b/app/views/landing_page/home.html.erb
@@ -13,8 +13,24 @@ box-shadow: 0px 5px 10px rgba(0,0,0,0.5)">
 text-align:left; padding-left: 30px;
 margin-left:auto; margin-right:auto">
 
-<a class="home_link_button" href="<%= users_path %>"> Users </a><br>
-<a class="home_link_button" href="<%= users_path %>/new"> Add New User </a>
+<a class="home_link_button" style="text-decoration: none;
+	background-color: white;
+	display: block;
+	width: 200px;
+	margin: 0 auto;
+	color: gray;
+	height: 30px;
+	line-height: 30px;
+	text-align:center;" href="<%= users_path %>"> Users </a><br>
+<a class="home_link_button" style="text-decoration: none;
+	background-color: white;
+	display: block;
+	width: 200px;
+	margin: 0 auto;
+	color: gray;
+	height: 30px;
+	line-height: 30px;
+	text-align:center;" href="<%= users_path %>/new"> Add New User </a>
 
 <!--<form>
 <input style="height: 40px" type="text" size="40" value="What are you?"><br><br>
