--- a/app/views/landing_page/home.html.erb
+++ b/app/views/landing_page/home.html.erb
@@ -30,7 +30,25 @@ margin-left:auto; margin-right:auto">
 	color: gray;
 	height: 30px;
 	line-height: 30px;
-	text-align:center;" href="<%= users_path %>/new"> Add New User </a>
+	text-align:center;" href="<%= users_path %>/new"> Add New User </a><br>
+<a class="home_link_button" style="text-decoration: none;
+	background-color: white;
+	display: block;
+	width: 200px;
+	margin: 0 auto;
+	color: gray;
+	height: 30px;
+	line-height: 30px;
+	text-align:center;" href="<%= pets_path %>"> Pets </a><br>
+<a class="home_link_button" style="text-decoration: none;
+	background-color: white;
+	display: block;
+	width: 200px;
+	margin: 0 auto;
+	color: gray;
+	height: 30px;
+	line-height: 30px;
+	text-align:center;" href="<%= pets_path %>/new"> Add New Pet </a>
 
 <!--<form>
 <input style="height: 40px" type="text" size="40" value="What are you?"><br><br>
