--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -36,6 +36,9 @@
  		<td class="users_cell" style="-webkit-text-security: disc;overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;"><%= user.password %></td>
+		<td><%= link_to "show", user_path(user.id) %></td>
+		<td><%= link_to "edit", edit_user_path(user.id) %> </td>
+		<td><%= link_to "destroy", user, confirm: "you sure you want to do this?", method: :delete %> </td>
  	</tr>
  	<% end %>
 </table>
