--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -10,6 +10,7 @@
 		<tr> 
 			<td><%= pet.name %></td> 
 			<td><%= pet.age %></td> 
+			<td><%= pet.user.name %></td>  
 			
 		</tr> 
 	<% end %> 
