--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -10,7 +10,7 @@
 		<tr> 
 			<td><%= pet.name %></td> 
 			<td><%= pet.age %></td> 
-			<td><%= pet.user %></td> 			
+			<td><%= pet.user.name %></td> 			
 			<td><%= link_to "show", pet_path(pet.id) %></td>
 			<td><%= link_to "edit", edit_pet_path(pet.id) %> </td>
 			<td><%= button_to "destroy", pet, confirm: "you sure you want to do this?", method: :delete %> </td>
