--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,13 @@
+<div class="error-msg"> 
+	<% if @user.errors.any? %>      
+		<ul>      
+			<% @user.errors.full_messages.each do |msg| %>       
+				<li><%= msg %></li>      
+			<% end %>    
+		</ul>   
+	<% end %> 
+</div>
+
 <%= form_for(@user) do |f| %> 
 <div class="field">    
 	<p>name</p> <%= f.text_field :name%>    
@@ -7,6 +17,9 @@
 </div>    
 <div class="field">    
 	<p>password</p><%= f.text_field :password%>    
+</div>
+<div class="field">      
+	<p>confirm password</p><%= f.text_field :password_confirmation%>   
 </div>
 <div class="actions">      
 	<%= f.submit %>    
