--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,6 +8,16 @@
 	background-color: #DDD;
 	text-align: center;
 	box-shadow: 0px 5px 10px rgba(0,0,0,0.5);">
+<div class="error-msg"> 
+	<% if @user.errors.any? %>      
+		<ul>      
+			<% @user.errors.full_messages.each do |msg| %>       
+				<li><%= msg %></li>      
+			<% end %>    
+		</ul>   
+	<% end %> 
+</div>
+
 <%= form_for(@user) do |f| %>
  	<div class="field">
     		<p>name</p> 
@@ -21,6 +31,10 @@
     		<p>password</p> 
      		<%= f.text_field :password%>
     	</div>
+		<div class="field">      
+			<p>confirm password</p>
+			<%= f.text_field :password_confirmation%>   
+		</div>
     		<div class="actions">
       		<%= f.submit %>
     	</div>
