--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,5 @@
+<div class="content">
+
 <div class="error-msg"> 
 	<% if @user.errors.any? %>      
 		<ul>      
@@ -25,3 +27,5 @@
 	<%= f.submit %>    
 </div> 
 <% end %>
+
+</div>
