--- a/app/assets/stylesheets/pets.css.scss
+++ b/app/assets/stylesheets/pets.css.scss
@@ -1,3 +1,60 @@
 // Place all the styles related to the Pets controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// Place all the styles related to the Users controller here.
+// They will automatically be included in application.css.
+// You can use Sass (SCSS) here: http://sass-lang.com/
+
+.content {
+	width: 500px;
+	height: auto;
+	font-family: verdana;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	margin-top: 20px;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: #DDD;
+	text-align: center;
+	box-shadow: 0px 5px 10px rgba(0,0,0,0.5);
+}
+
+.pets_table {
+	width: 455px;
+	table-layout:fixed;
+	height:auto;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: #BBB;
+	overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.pets_cell {
+	overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.pets_title {
+	border: 1px solid #999;
+	color:white;
+}
+
+.pets_link_button {
+	text-decoration: none;
+	background-color: white;
+	display: block;
+	width: 100px;
+	margin: 0 auto;
+	color: gray;
+	height: 30px;
+	line-height: 30px;
+}
+
+.error-msg {
+	color: red;
+	text-decoration: none;
+}
