--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -4,9 +4,10 @@
 
 .content {
 	width: 500px;
-	height: 700px;
+	height: auto;
 	font-family: verdana;
 	padding-top: 20px;
+	padding-bottom: 20px;
 	margin-top: 20px;
 	margin-left: auto;
 	margin-right: auto;
