--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,15 +5,15 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
-   <link rel="stylesheet" type="text/css" ref="../assets/bootstrap/css/bootstrap.css">  
-   <script src="../assets/bootstrap/js/bootstrap.js"></script>
+   <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" rel="stylesheet">
+   <script href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.0.2/bootstrap.min.js"></script>
 </head>
 <body>
 
-<nav class="navbar navbar-default" role="navigation">  
+<nav class="navbar navbar-inverse" role="navigation">  
 <!-- Brand and toggle get grouped for better mobile display -->  
 <div class="navbar-header">   
- <a class="navbar-brand" href="#">Tasks</a>  
+ <a class="navbar-brand" href="<%= root_path %>">Users&Pets</a>  
  </div>
     <ul class="nav navbar-nav">     
 	<li class="dropdown">       
@@ -26,9 +26,10 @@
 	</ul>
     <ul class="nav navbar-nav">      
 	<li class="dropdown">       
-	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Lists <b class="caret"></b></a>  
-	<ul class="dropdown-menu">          <li><%= link_to "newlist", new_tasklist_path %></li>       
-	<li><%= link_to "lists", tasklists_path %></li>    
+	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Pets <b class="caret"></b></a>  
+	<ul class="dropdown-menu">          
+	<li><%= link_to "new pet", new_pet_path %></li>       
+	<li><%= link_to "pets", pets_path %></li>    
     </ul>    
 	</li>   
 	</ul>
