--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,15 +8,7 @@
 	background-color: #DDD;
 	text-align: center;
 	box-shadow: 0px 5px 10px rgba(0,0,0,0.5);">
-<table class="users_table" style="width: 455px;
-	table-layout:fixed;
-	height:auto;
-	margin-left: auto;
-	margin-right: auto;
-	background-color: #BBB;
-	overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;">
+<table class="users_table" >
  	<tr>
  		<td class="users_title" style="border: 1px solid #999;
 	color:white;">name</td>
