--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,7 @@
+<div class="content">
 <div>
 	<h2><%= @user.name %></h2> 
 	<p><%= @user.email %></p> 
 	<p><%= @user.password %></p>
+</div>
 </div>
