--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,7 +1,8 @@
-<h1>Pets#show</h1>
+<div class="content">
 
 <div>
 	<h2><%= @pet.name %></h2> 
 	<p><%= @pet.age %></p> 
 	<p><%= @pet.user.name %></p>
+</div>
 </div>
