--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,3 +12,21 @@
  *= require_tree .
  *= require bootstrap
  */
+
+* {
+    margin: 0;
+}
+html, body {
+    height: 100%;
+}
+.wrapper {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -60px; /* the bottom margin is the negative value of the footer's height */
+	background-color: #eee;
+}
+#footer, .push {
+    height: 60px; /* .push must be the same height as .footer */
+	background: #111;
+}
