--- a/app/views/landing_page/home.html.erb
+++ b/app/views/landing_page/home.html.erb
@@ -1,9 +1,7 @@
 <head>
 </head>
 <body>
-<div style="width:500px; height: 700px; font-family:verdana; padding-top:20px; margin-top: 20px;
-margin-left: auto; margin-right: auto; background-color: #DDD; text-align:center;
-box-shadow: 0px 5px 10px rgba(0,0,0,0.5)">
+<div class="content">
 <h1>Anton Basov</h1>
 <a style="text-decoration:none" href="https://github.com/bastova/app1">https://github.com/bastova/app1</a>
 <br><br>
