--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,33 +10,55 @@
 </head>
 <body>
 
-<nav class="navbar navbar-inverse" role="navigation">  
+<div class="wrapper">
+
+<script type="text/javascript">
+$('#nav').affix({
+    offset: { top: $('#nav').offset().top }
+});​
+</script>
+
+<nav id="nav" style="position: fixed;
+    top: 0px;
+    width: 100%;"
+	class="navbar navbar-inverse" role="navigation">  
 <!-- Brand and toggle get grouped for better mobile display -->  
 <div class="navbar-header">   
  <a class="navbar-brand" href="<%= root_path %>">Users&Pets</a>  
  </div>
     <ul class="nav navbar-nav">     
-	<li class="dropdown">       
-	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Users <b class="caret"></b></a>     
-	<ul class="dropdown-menu">          
-	<li><%= link_to "new user", new_user_path %></li>       
-	<li><%= link_to "users", users_path %></li>      
-	</ul>    
-	</li>   
+		<li class="dropdown">       
+			<a href="#" class="dropdown-toggle" data-toggle="dropdown">Users <b class="caret"></b></a>     
+			<ul class="dropdown-menu">          
+				<li><%= link_to "new user", new_user_path %></li>       
+				<li><%= link_to "users", users_path %></li>      
+			</ul>    
+		</li>   
 	</ul>
     <ul class="nav navbar-nav">      
-	<li class="dropdown">       
-	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Pets <b class="caret"></b></a>  
-	<ul class="dropdown-menu">          
-	<li><%= link_to "new pet", new_pet_path %></li>       
-	<li><%= link_to "pets", pets_path %></li>    
-    </ul>    
-	</li>   
+		<li class="dropdown">       
+			<a href="#" class="dropdown-toggle" data-toggle="dropdown">Pets <b class="caret"></b></a>  
+			<ul class="dropdown-menu">          
+				<li><%= link_to "new pet", new_pet_path %></li>       
+				<li><%= link_to "pets", pets_path %></li>    
+			</ul>    
+		</li>   
 	</ul>
-	</nav>
+</nav>
 
+<div style="height:50px; width:100%"></div>
 
 <%= yield %>
+
+<div style="height:80px;"> </div>
+
+</div>
+
+<div class="push" ></div>
+
+<div id="footer">
+
+</div>
 
 </body>
 </html>
