--- a/app/views/pets/edit.html.erb
+++ b/app/views/pets/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Pets#edit</h1>
+<div class="content">
 
 <%= form_for(@pet) do |f| %> 
 <div class="field">    
@@ -14,3 +14,5 @@
 	<%= f.submit %>    
 </div> 
 <% end %>
+
+</div>
