--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -1,4 +1,5 @@
-<h1>Pets new</h1>
+<div class="content">
+
 <%= form_for(@pet) do |f| %> 
 	<div class="field">   
 		<p>name</p><%= f.text_field :name%>    
@@ -13,3 +14,5 @@
 		<%= f.submit %>    
 	</div> 
 <% end %>
+
+</div>
