--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,13 +1,4 @@
-<div class="content" style="width: 500px;
-	height: 700px;
-	font-family: verdana;
-	padding-top: 20px;
-	margin-top: 20px;
-	margin-left: auto;
-	margin-right: auto;
-	background-color: #DDD;
-	text-align: center;
-	box-shadow: 0px 5px 10px rgba(0,0,0,0.5);">
+<div class="content" >
 <div class="error-msg"> 
 	<% if @user.errors.any? %>      
 		<ul>      
