--- a/app/views/landing_page/home.html.erb
+++ b/app/views/landing_page/home.html.erb
@@ -2,7 +2,7 @@
 </head>
 <body>
 <div class="content">
-<h1>Anton Basov</h1>
+<h1>Anton Bastov</h1>
 <a style="text-decoration:none" href="https://github.com/bastova/app1">https://github.com/bastova/app1</a>
 <br><br>
 <img style="width:400px" src="http://fc03.deviantart.net/fs70/i/2013/039/1/8/heimerdinger_still_has_hope_by_kukara4-d5tmd1r.jpg" />
