--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -13,3 +13,19 @@
 	line-height: 30px;
 	text-align:center;
 }
+
+.home_link_button_hover {
+	text-decoration: none;
+	background-color: black;
+	display: block;
+	width: 200px;
+	margin: 0 auto;
+	color: gray;
+	height: 30px;
+	line-height: 30px;
+	text-align:center;
+}
+
+.text {
+	color:red;
+}
