--- a/app/views/landing_page/home.html.erb
+++ b/app/views/landing_page/home.html.erb
@@ -11,15 +11,7 @@
 text-align:left; padding-left: 30px;
 margin-left:auto; margin-right:auto">
 
-<a class="home_link_button" style="text-decoration: none;
-	background-color: white;
-	display: block;
-	width: 200px;
-	margin: 0 auto;
-	color: gray;
-	height: 30px;
-	line-height: 30px;
-	text-align:center;" href="<%= users_path %>"> Users </a><br>
+<a class="home_link_button" style="text-decoration: none;" href="<%= users_path %>"> Users </a><br>
 <a class="home_link_button" style="text-decoration: none;
 	background-color: white;
 	display: block;
@@ -47,6 +39,8 @@ margin-left:auto; margin-right:auto">
 	height: 30px;
 	line-height: 30px;
 	text-align:center;" href="<%= pets_path %>/new"> Add New Pet </a>
+	
+<p class="text" >some random text</p>
 
 <!--<form>
 <input style="height: 40px" type="text" size="40" value="What are you?"><br><br>
