--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -42,6 +42,10 @@
 	
 </table>
 
+<p id="text" >some random text</p>
+
+<div class="myclass" style="margin: auto;"></div>
+
 <br>
 <a class="pets_link_button" style="text-decoration: none;
 	background-color: white;
