--- a/app/assets/stylesheets/pets.css.scss
+++ b/app/assets/stylesheets/pets.css.scss
@@ -59,3 +59,13 @@
 	text-decoration: none;
 	text-align: left;
 }
+
+#text {
+	color:green;
+}
+
+.myclass {
+	width: 300px;
+	height: 200px;
+	background-color:red;
+}
