--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -41,9 +41,9 @@
 	<% end %> 
 	
 </table>
-
-<p id="text" >some random text</p>
-
+<br>
+<p class="text" >CLICK ME!</p>
+<br>
 <div class="myclass" style="margin: auto;"></div>
 
 <br>
